# pylife

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  models.py  new_views.py  pygame_views.py  pyproject.toml  requirements.txt  results.txt  service.py  specialfields.json  views.py
data/: games.db
src/: dao.py  models.py  service.py  views.py
