[tool.poetry]
name = "pylife"
version = "0.1.0"
description = ""
authors = ["Pedro Gobira <pedrogobira@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^3.9.2"
black = "^21.9b0"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
